Temporary fix for abbr overflow problem

--- a/styles/orbiterjp.css
+++ b/styles/orbiterjp.css
@@ -406,7 +406,7 @@ footer ul {
     font-weight: normal;
     position: absolute;
     left: 0;
-    bottom: -1.5rem;
+    bottom: -1.1rem;
     width: auto;
     white-space: nowrap;
     font-size: 0.7rem;
